# GieoVan

./: README.md  main.py  pyproject.toml  requirements.txt
GieoVan/: .gitignore  README.md  index.html  ingest_data.py  main.py  pyproject.toml
GieoVan/backend/: ingest_data.py  main.py  test_delete.py  verify_readme.py
GieoVan/backend/app/: auth.py  models.py
GieoVan/backend/database/: db.py
GieoVan/frontend/: admin.html  archive.html  feed.html  index.html  login.html  register.html
GieoVan/frontend/assets/css/: style.css
GieoVan/frontend/pages/: archive.html  feed.html  index.html  login.html  register.html
