[project]
name = "gieovan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt==4.0.1",
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "google-genai>=2.4.0",
    "langdetect>=1.0.9",
    "passlib[bcrypt]>=1.7.4",
    "pronouncing>=0.3.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.47.0",
]
